--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # the virtual environment; change it if you have created it with a different name
-.venv/
+.venv
 
 __pycache__/
 
 build/
+
+.vscode
